--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,5 +1,6 @@
 <div id="listagens">
 <h1>Listagem de Produtos</h1>
+<%= render :partial => 'lista_produto_autocomplete' -%>
 <%= render :partial => 'lista_produto_alphabox' -%>
 <%= render :partial => 'lista_produto', :object => @produtos -%>
 <%= render :partial => 'lista_produto_paginacao', :object => @produtos -%>
