Modificacoes layout loja

--- a/app/views/layouts/loja.html.erb
+++ b/app/views/layouts/loja.html.erb
@@ -6,8 +6,10 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>IXCA Gourmet - Loja</title>
   <%= stylesheet_link_tag 'gourmet' %>
+  <%= stylesheet_link_tag 'jquery-ui-1.7.1.custom.css'%>
   <%= javascript_include_tag "jquery.js" %>
   <%= javascript_include_tag "jquery.hotkeys.js" %>
+  <%= javascript_include_tag "jquery-ui-1.7.1.custom.min.js" %>
   <script>jQuery.noConflict();</script>
   <%= javascript_include_tag "loja.js" %>
   <%= javascript_include_tag :defaults %>
